--- a/pom.xml
+++ b/pom.xml
@@ -35,7 +35,7 @@
     </dependencies>
     <build>
         <sourceDirectory>src</sourceDirectory>
-        <finalName>${project.artifactId}</finalName>
+        <finalName>${project.artifactId}-${artifact.version}</finalName>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
